# PureMark

./: .claudeignore  .gitignore  .lintstagedrc.mjs  .oxlintrc.json  CLAUDE.md  README.md  cspell.json  debug_regex.js  index.html  package.json  promptfolio_payload.json  theme-editor.html  tsconfig.json  uno.config.ts  vite.config.ts
lang/: index.js  index.json
scripts/: generate-icons.mjs  html-image-syntax.test.mjs  launch-state-session-persistence.test.mjs  markdown-strong-regex.test.mjs  release.mjs  verify-commit.js
src/: App.vue  main.ts  style.less  theme-editor-main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  theme-editor.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  file_format.rs  image.rs  lib.rs  main.rs  markdown_file.rs  tearoff.rs  theme_store.rs  watcher.rs  window_manager.rs  workspace.rs
src-tauri/src/commands/: clipboard.rs  dialog.rs  file.rs  font.rs  launch.rs  mod.rs  shell.rs  tab.rs  theme.rs  update.rs  window.rs  workspace.rs
src/composables/: useTauri.ts
src/config/: fonts.ts  theme.ts
src/context/: createContext.ts  index.ts
src/core/: editor.ts  index.ts
src/directives/: index.ts
src/events/: index.ts
src/hooks/: useAIConfig.ts  useConfig.ts  useContent.ts  useContext.ts  useFile.ts  useFont.ts  useOtherConfig.ts  useOutline.ts  useSaveConfirmDialog.ts  useShortcutConfig.ts  useSourceCode.ts  useSpellCheck.ts  useTab.ts  useTheme.ts  useTitle.ts  useTreeState.ts  useUpdateDialog.ts  useWorkSpace.ts
src/plugins/: imagePathPlugin.ts  naive-ui.ts
src/router/: routes.ts
src/services/: ai.ts  fileService.ts  launchState.ts  sidebarWidth.ts  workspaceState.ts
src/stores/: app.ts
src/styles/: codemirror.less  vditor.less
src/themes/: theme-main.less
src/types/: font.ts  tab.ts
src/utils/: dom.ts  exports.ts  heightTransition.ts  inertiaScroll.ts  lineEnding.ts  (+8 more)
(+123 files in other folders)
