[package]
name = "puremark"
version = "0.1.0"
description = "A Markdown editor built with Tauri and Vue 3"
authors = ["NianLiu"]
license = "MIT"
repository = "https://github.com/nianliu-jj/PureMark"
edition = "2024"
rust-version = "1.85"

[lib]
name = "puremark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-os = "2.3.2"
tauri-plugin-fs = "2.5.0"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-opener = "2.5.3"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
anyhow = "1.0.102"
thiserror = "1.0.69"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
encoding_rs = "0.8.35"
regex = "1.12.3"
walkdir = "2.5.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
once_cell = "1.21.4"
# 阶段 3：文件监听
notify = "6.1.1"
notify-debouncer-full = "0.3.2"
# 阶段 4：系统字体枚举 + URL 解析
font-kit = "0.14.3"
url = "2.5.8"
# 阶段 5：多窗口 + Tab tear-off
mouse_position = "0.1.4"
uuid = { version = "1.23.1", features = ["v4"] }
tauri-plugin-single-instance = "2.4.1"
# 阶段 6：自动更新
reqwest = { version = "0.12.28", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = "5.4.1"
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_System_Ole"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2.7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
